@@ -242,6 +242,7 @@ sub startup {
 
     my $auth_plugin;
     my $authz_plugin;
+    my $welcome_plugin;
     my @refresh;
     
     foreach my $plugin_class (reverse @plugins_config) {
@@ -264,8 +265,12 @@ sub startup {
         my $plugin = $plugin_class->new($self->config, $plugin_config, $self);
 
         if($plugin->does('PlugAuth::Role::Auth')) {
-          $plugin->next_auth($auth_plugin);
-          $auth_plugin = $plugin;
+            $plugin->next_auth($auth_plugin);
+            $auth_plugin = $plugin;
+        }
+        
+        if($plugin->does('PlugAuth::Role::Welcome')) {
+            $welcome_plugin = $plugin;
         }
 
         $authz_plugin = $plugin if $plugin->does('PlugAuth::Role::Authz');
@@ -301,6 +306,15 @@ sub startup {
     } else {
         $self->helper(refresh => sub { 1 });
     }
+    
+    $self->helper(welcome => sub {
+        my($self, $c) = @_;
+        if($welcome_plugin) {
+            $welcome_plugin->welcome($c);
+        } else {
+            $c->render_text("welcome to plug auth");
+        }
+    });
 }
 
 # Silence warnings; this is only used for for session
