@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - added welcome role (PlugAuth::Role::Welcome)
   - wrote PlugAuth::Guide::Plugin (was a stub)
 
 0.03      2012-12-03 10:43:56 America/New_York
